# Tank-of-Destiny

./: .gitignore  CMakeLists.txt  README  README.md
include/: context.h  context_lua.h  core.h  errors.h  init.h  main_loop.h  open_window.h  print.h  quit.h  script.h  script_call.h  script_check_arg_number.h  status.h
include/core/: context.h  errors.h  system.h
include/script/: context_lua.h  script_function.h
src/: context_lua_check.c  context_lua_get_bpp.c  context_lua_get_height.c  context_lua_get_width.c  context_lua_push.c  context_lua_register.c  context_lua_set_bpp.c  context_lua_set_height.c  context_lua_set_width.c  init.c  input_enum.hpp  log.h  main.c  main.cpp  main_loop.c  open_window.c  print.c  quit.c  script.c  script_call.c  script_check_arg_number.c  window.cpp  window.hpp
src/core/: create_context.c  init_all.c  init_lua.c  init_sdl.c  main_loop.c  open_window.c  quit.c
src/script/: context_lua_check.c  context_lua_get_bpp.c  context_lua_get_height.c  context_lua_get_width.c  context_lua_push.c  context_lua_register.c  context_lua_set_bpp.c  context_lua_set_height.c  context_lua_set_width.c  script_call_function.c  script_check_arg_number.c  script_load.c
tests/: CMakeLists.txt
tests/include/: c_just_test_it.h
tests/scripts/: context_lua_bind.lua  main_loop.lua
tests/src/: context_lua_bind.c  default_value.c  init.c  init_error.c  main_loop.c  open_window.c  open_window_error.c  stub_sdl_get_error.c  stub_sdl_init.c  stub_sdl_init_error.c  stub_sdl_quit.c  stub_sdl_set_video_mode.c  stub_sdl_set_video_mode_error.c  test.c
